--- a/news/build.gradle
+++ b/news/build.gradle
@@ -30,6 +30,7 @@ dependencies {
     annotationProcessor "org.mapstruct:mapstruct-processor:1.6.2"
     annotationProcessor "org.projectlombok:lombok:1.18.34"
 
+    implementation 'org.springframework.boot:spring-boot-starter-cache'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-validation'
     implementation 'org.springframework.boot:spring-boot-starter-web'
