--- a/settings.gradle
+++ b/settings.gradle
@@ -4,4 +4,5 @@ include 'algorithm-cache'
 include 'exception-handler'
 include 'exception-handler-starter'
 include 'user-api'
+include 'logging-starter'
 
