--- a/news-api/src/main/resources/application.yaml
+++ b/news-api/src/main/resources/application.yaml
@@ -13,6 +13,9 @@ spring:
     driver-class-name: org.postgresql.Driver
   liquibase:
     enabled: true
+  data:
+    redis:
+      port: 6379
 server:
   port: 8080
 logging:
