--- a/exception-handler-starter/build.gradle
+++ b/exception-handler-starter/build.gradle
@@ -14,6 +14,8 @@ repositories {
 
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter'
+    implementation 'io.github.openfeign:feign-core:13.2.1'
+    implementation 'com.fasterxml.jackson.core:jackson-databind'
     compileOnly 'jakarta.servlet:jakarta.servlet-api'
     implementation 'jakarta.validation:jakarta.validation-api'
     implementation 'org.springframework:spring-web'
