--- a/news-api/build.gradle
+++ b/news-api/build.gradle
@@ -37,6 +37,7 @@ dependencies {
     annotationProcessor "org.projectlombok:lombok-mapstruct-binding:0.2.0"
     annotationProcessor "org.mapstruct:mapstruct-processor:1.6.2"
     annotationProcessor "org.projectlombok:lombok"
+    implementation 'org.jetbrains:annotations:24.1.0'
 
     implementation 'io.jsonwebtoken:jjwt-api:0.12.5'
     implementation 'io.jsonwebtoken:jjwt-impl:0.12.5'
