add test for module

--- a/logging-starter/build.gradle
+++ b/logging-starter/build.gradle
@@ -21,7 +21,10 @@ dependencies {
     annotationProcessor "org.projectlombok:lombok"
     compileOnly "org.projectlombok:lombok"
     implementation 'org.springframework.boot:spring-boot-starter-aop'
-    testImplementation platform('org.junit:junit-bom:5.9.1')
+    testCompileOnly 'org.projectlombok:lombok'
+    testAnnotationProcessor 'org.projectlombok:lombok'
+    testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    testImplementation 'org.mockito:mockito-junit-jupiter'
     testImplementation 'org.junit.jupiter:junit-jupiter'
 }
 
