--- a/news-api/build.gradle
+++ b/news-api/build.gradle
@@ -55,11 +55,14 @@ dependencies {
     implementation 'org.liquibase:liquibase-core'
     runtimeOnly 'org.postgresql:postgresql'
 
-    testImplementation 'com.maciejwalkowiak.spring:wiremock-spring-boot:2.1.3'
+    testCompileOnly 'org.projectlombok:lombok'
+    testAnnotationProcessor 'org.projectlombok:lombok'
+    testImplementation 'org.wiremock.integrations:wiremock-spring-boot:3.2.0'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'org.springframework.boot:spring-boot-testcontainers'
     testImplementation 'org.testcontainers:junit-jupiter'
     testImplementation 'org.testcontainers:postgresql'
+    testImplementation 'com.redis.testcontainers:testcontainers-redis-junit-jupiter:1.4.6'
 }
 
 dependencyManagement {
