--- a/user-api/build.gradle
+++ b/user-api/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'java'
     id 'org.springframework.boot' version '3.3.4'
+    id 'org.springdoc.openapi-gradle-plugin' version '1.9.0'
     id 'io.spring.dependency-management' version '1.1.6'
 }
 
@@ -23,6 +24,7 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-validation'
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.security:spring-security-crypto'
+    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.5.0'
     implementation 'org.liquibase:liquibase-core'
     implementation 'org.postgresql:postgresql'
 
