--- a/user-api/src/main/resources/application.yaml
+++ b/user-api/src/main/resources/application.yaml
@@ -13,5 +13,8 @@ spring:
     driver-class-name: org.postgresql.Driver
   liquibase:
     enabled: true
+springdoc:
+  default-produces-media-type: application/json
+  override-with-generic-response: false
 server:
   port: 8081
