--- a/news-api/src/main/resources/application.yaml
+++ b/news-api/src/main/resources/application.yaml
@@ -26,3 +26,16 @@ server:
   port: 8080
 jwt:
   expiry-time: 600000
+logging:
+  level:
+    org.springframework: error
+    ru.clevertec: info
+  pattern:
+    file: "%d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - %msg%n"
+  file:
+    name: /logs/news-api.log
+  logback:
+    rollingpolicy:
+      max-file-size: 10MB
+      max-history: 10
+      file-name-pattern: /logs/news-api.%d{yyyy-MM-dd}.%i.log
