--- a/algorithm-cache/build.gradle
+++ b/algorithm-cache/build.gradle
@@ -4,6 +4,14 @@ plugins {
     id 'io.spring.dependency-management' version '1.1.6'
 }
 
+bootJar {
+    enabled = false
+}
+
+jar {
+    enabled = true
+}
+
 group = 'ru.clevertec'
 version = '1.0-SNAPSHOT'
 
