--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,8 +1,122 @@
 version: '3.3'
 
 services:
+  user-api-db:
+    container_name: user-api-db
+    image: postgres:latest
+    restart: always
+    environment:
+      POSTGRES_USER: admin
+      POSTGRES_PASSWORD: admin
+      POSTGRES_DB: users
+    volumes:
+      - user-api-db-data:/var/lib/postgresql/data
+    networks:
+      - docker-network-internal
+    profiles:
+      - algorithm-cache
+      - redis-cache
+
+  user-api:
+    build:
+      context: user-api
+      dockerfile: Dockerfile
+    container_name: user-api
+    restart: no
+    depends_on:
+      - user-api-db
+    ports:
+      - "8081:8081"
+    volumes:
+      - user-api-logs:/logs
+    environment:
+      - SPRING_PROFILES_ACTIVE=prod
+    networks:
+      - docker-network-internal
+      - docker-network
+    profiles:
+      - algorithm-cache
+      - redis-cache
+
+  news-api-db:
+    container_name: news-api-db
+    image: postgres:latest
+    restart: always
+    environment:
+      POSTGRES_USER: admin
+      POSTGRES_PASSWORD: admin
+      POSTGRES_DB: news
+    volumes:
+      - news-api-db-data:/var/lib/postgresql/data
+    networks:
+      - docker-network-internal
+    profiles:
+      - algorithm-cache
+      - redis-cache
+
+
+  news-api-redis-cache:
+    build:
+      context: news-api
+      dockerfile: Dockerfile
+    container_name: news-api
+    restart: no
+    depends_on:
+      - news-api-db
+    ports:
+      - "8080:8080"
+    volumes:
+      - news-api-logs:/logs
+    environment:
+      - SPRING_PROFILES_ACTIVE=prod-redis
+    networks:
+      - docker-network-internal
+      - docker-network
+    profiles:
+      - redis-cache
+
+  news-api:
+    build:
+      context: news-api
+      dockerfile: Dockerfile
+    container_name: news-api
+    restart: no
+    depends_on:
+      - news-api-db
+    ports:
+      - "8080:8080"
+    volumes:
+      - news-api-logs:/logs
+    environment:
+      - SPRING_PROFILES_ACTIVE=prod
+    networks:
+      - docker-network-internal
+      - docker-network
+    profiles:
+      - algorithm-cache
+
+
   redis:
     image: redis:latest
+    container_name: redis-cache
     restart: always
-    ports:
-      - "6379:6379"
+    networks:
+      - docker-network-internal
+    profiles:
+      - redis-cache
+
+
+volumes:
+  user-api-db-data:
+    external: false
+  news-api-db-data:
+    external: false
+  user-api-logs:
+    external: false
+  news-api-logs:
+    external: false
+
+networks:
+  docker-network-internal:
+    internal: true
+  docker-network:
