--- a/news-api/src/main/resources/application-prod-redis.yaml
+++ b/news-api/src/main/resources/application-prod-redis.yaml
@@ -1,4 +1,16 @@
 spring:
+  datasource:
+    url: jdbc:postgresql://news-api-db:5432/news
+    username: admin
+    password: admin
+    driver-class-name: org.postgresql.Driver
+  cloud:
+    openfeign:
+      client:
+        config:
+          userClient:
+            url: http://user-api:8081/users/
   data:
     redis:
       port: 6379
+      host: redis-cache
