--- a/user-api/src/main/resources/application.yaml
+++ b/user-api/src/main/resources/application.yaml
@@ -18,3 +18,16 @@ springdoc:
   override-with-generic-response: false
 server:
   port: 8081
+logging:
+  level:
+    org.springframework: error
+    ru.clevertec: info
+  pattern:
+    file: "%d{yyyy-MM-dd HH:mm:ss} [%thread] %-3level %logger{36} - %msg%n"
+  file:
+    name: /logs/user-api.log
+  logback:
+    rollingpolicy:
+      max-file-size: 10MB
+      max-history: 10
+      file-name-pattern: /logs/user-api.%d{yyyy-MM-dd}.%i.log
